Fix sidebar widget z-index without hack

--- a/frontend/src/components/core/Sidebar/Sidebar.scss
+++ b/frontend/src/components/core/Sidebar/Sidebar.scss
@@ -155,7 +155,3 @@
     }
   }
 }
-
-div[data-baseweb="popover"] {
-  z-index: $z-index-sidebar-mobile + 1;
-}
